--- a/package.json
+++ b/package.json
@@ -10,9 +10,23 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "uuid": "^11.1.0",
     "ws": "^8.18.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Arisile/assignment.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Arisile/assignment/issues"
+  },
+  "homepage": "https://github.com/Arisile/assignment#readme",
+  "description": ""
 }
