--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PRODUCTION_SERVER=mongodb+srv://Arisile:IP0Jxt0q3bH3Eelr@cluster0.iogaelh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 LOCAL_SERVER=mongodb://localhost:27017/websocket
-ENVIRONMENT=production
+ENVIRONMENT=Local
